gftpaymentsapp/virtual-services/config-service-vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: config-service-vs
spec:
  hosts:
    - "a0367d506e43111e992730264510012f-77131802.eu-west-1.elb.amazonaws.com"
  gateways:
    - payments-app-gw
  http:
    - route:
        - destination:
            host: config-service # Destination service, must match service name
            subset: v1

---
