gftpaymentsapp/virtual-services/gftpaymentsapp-vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payments-app-route
spec:
  hosts:
    - "a0367d506e43111e992730264510012f-77131802.eu-west-1.elb.amazonaws.com" # Host could also be "*"
  gateways:
    - payments-app-gw # Gateway that allows port 80
  http:
    - route:
        - destination:
           host: payments-app
           port:
    - match:
        - uri:
            prefix: /market-data/
      route:
        - destination:
            host: market-data # prometheus in the default namespace
            subset: v1
            port:
              number: 8093
    - match:
        - uri:
            prefix: /config-service/ # Prefix indicates the path might have more after it
      route:
        - destination:
            host: config-service
            subset: v1
            port:
              number: 8094

---
