gftpaymentsapp/virtual-services/user-profile-vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-profile-vs
spec:
  hosts:
    - "a0367d506e43111e992730264510012f-77131802.eu-west-1.elb.amazonaws.com"
  gateways:
    - user-profile-gw
  http:
    - match:
        - port: 8090 # Port, must match what was used in Gateway
      route:
        - destination:
            host: user-profile # Destination service, must match service name
            subset: v1

---
